# xdp-system-compat

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
scripts/: print-sample-json.sh
src/: e2e.rs  lib.rs  main.rs  model.rs  probe.rs  rules.rs
tests/: rules_output.rs
